=========================================================================
CHANGE LOG
=========================================================================

2007-11-14  Warren L. DeLano <warren@delsci.com>

	* fixed but in binary .grd reader code
	
2007-11-11  Warren L. DeLano <warren@delsci.com>

	* retain_order is now object-specific

	* restricted geom rebuilds after mask
	
2007-10-31  Warren L. DeLano <warren@delsci.com>

	* added a couple of new CGO examples
	
2007-10-30  Warren L. DeLano <warren@delsci.com>

	* direct SDF output for single and multi-state objects
	
2007-10-29  Warren L. DeLano <warren@delsci.com>

	* added workaround for writing PQR files with long coordinates
	
2007-10-29  Warren L. DeLano <warren@delsci.com>

	* improved memory consumption when rendering lots of triangles
	
2007-10-28  Warren L. DeLano <warren@delsci.com>

	* implemented changed to help support MAEstro format

	* colorspaces now apply to ramps as well
	
2007-10-24  Warren L. DeLano <warren@delsci.com>

	* quashed session save bug discovered by GT (PyNone refcnting)
	
2007-10-22  Warren L. DeLano <warren@delsci.com>
  	
	* fixed command synchronization problem with async pdb fetch
	
2007-10-17  Warren L. DeLano <warren@delsci.com>

	* incorporated various changes for improved JyMOL capabilities
	
2007-10-15  Warren L. DeLano <warren@delsci.com>

	* improved behavior of blended ramps based on atomic distances
	
	* added map-related methods to the PyMOL_* internal C-API
	
2007-10-05  Warren L. DeLano <warren@delsci.com>

	* fixed some issues regarding .MAE support
	
	* added support for multistate XYZ files
	
2007-09-26  Warren L. DeLano <warren@delsci.com>

	* bug fix with auto_defer_builds

	* can now open multiple files at once (tcl/tk file open)
	
2007-09-24  Warren L. DeLano <warren@delsci.com>

	* added auto_defer_builds setting
	
	* fixed performance bug w/ large discrete objects (10^3 states)
	
2007-09-20  Warren L. DeLano <warren@delsci.com>
